@@ -9,8 +9,11 @@ RECENT CHANGES
 * #338 db:drop should have an option to drop all tables instead of dropping the database (by Fabrizio Branca)
 * #343 Adds Command for External Magento Connect Validation (by Alan Storm)
 * #346 Fix for "extension on GitHub" markdown. (by Andrea De Pirro)
+* #349 (by Aydin Hassan)
+* #350 New command to remove attributes (by Aydin Hassan)
 * #354 Restore autoloaders after loading Magento (by Maarten van Schaik and Melvyn Sopacua)
 * #355 Implement drop support for db:import (by Melvyn Sopacua)
+* Added --log-junit option to sys:setup:compare-versions command (by Christian Münch)
 
 ======
 1.89.2
